--- a/teste/src/app/formulario/formswoman.module.css
+++ b/teste/src/app/formulario/formswoman.module.css
@@ -95,3 +95,23 @@
   text-decoration: underline;
   font-weight: bold;
 }
+
+.dogContainer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.dogImage {
+  width: 300px;
+  height: 200px;
+  border-radius: 12px;
+  object-fit: cover;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dogText {
+  margin-top: 10px;
+  color: white;
+  font-weight: bold;
+}
+
